# projet_tache_ouvrier

./: Makefile  config.status  projet.glade.bak
autom4te.cache/: requests
src/: Makefile  Makefile.am  Makefile.in  abscence.c  abscence.h  abscence.txt  callbacks.c  callbacks.h  interface.c  interface.h.bak  main.c  ouvrier.c  ouvrier.h  ouvrier.txt  projet
src/.deps/: abscence.Po  callbacks.Po  ouvrier.Po
